--- a/app/src/main/res/layout/fragment_bookmarks.xml
+++ b/app/src/main/res/layout/fragment_bookmarks.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:paddingStart="@dimen/screen_vertical_padding"
     android:paddingEnd="@dimen/screen_vertical_padding"
-    tools:context=".features.home.BookmarksFragment">
+    tools:context=".features.bookmarks.home.BookmarksFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/bookmarks_rv"
