--- a/app/src/main/res/layout/fragment_add_bookmark_map.xml
+++ b/app/src/main/res/layout/fragment_add_bookmark_map.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/add_bookmark_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -11,30 +12,25 @@
         android:layout_height="match_parent"
         tools:context=".features.bookmarks.map.AddBookmarkMapFragment" />
 
-    <androidx.cardview.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/root"
+    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="@dimen/map_footer_card_height"
         android:layout_gravity="center|bottom"
-        android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@color/white"
         android:orientation="vertical"
-        android:paddingBottom="8dp"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
         card_view:cardCornerRadius="@dimen/card_corner_radius"
         card_view:cardElevation="@dimen/card_elevation">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="58dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginLeft="10dp"
-            android:gravity="center_horizontal"
-            android:paddingTop="8dp">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:gravity="center">
 
             <ImageView
                 android:id="@+id/location_icon"
@@ -57,38 +53,32 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:elevation="4dp"
                     android:layout_marginLeft="20dp"
+                    android:elevation="4dp"
                     android:visibility="gone" />
 
 
-                <TextView
+                <EditText
                     android:id="@+id/location"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:fontFamily="sans-serif-medium"
+                    android:maxLines="1"
+                    android:minWidth="60dp"
                     android:textColor="@color/black"
-                    android:textSize="18sp"
+                    android:textSize="17sp"
                     android:textStyle="normal" />
             </FrameLayout>
         </RelativeLayout>
-
-        <Button
-            android:id="@+id/nearby_places_button"
-            style="@style/LipstickButton"
-            android:layout_gravity="bottom"
-            android:layout_margin="8dp"
-            android:text="@string/map_button_text" />
-
     </androidx.cardview.widget.CardView>
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginBottom="30dp"
         android:layout_marginLeft="1dp"
+        android:layout_marginBottom="30dp"
         android:src="@drawable/ic_pin" />
 
-</FrameLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
