--- a/app/src/main/res/layout/fragment_bookmarks.xml
+++ b/app/src/main/res/layout/fragment_bookmarks.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/bookmarks_root"
     android:layout_width="match_parent"
@@ -12,11 +11,11 @@
         android:id="@+id/bookmarks_rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:minHeight="150dp"/>
+        android:paddingStart="@dimen/screen_vertical_padding"
+        android:paddingEnd="@dimen/screen_vertical_padding" />
+
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:paddingStart="@dimen/screen_vertical_padding"
-        android:paddingEnd="@dimen/screen_vertical_padding"
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
