--- a/app/src/main/res/layout/fragment_weather_forecast.xml
+++ b/app/src/main/res/layout/fragment_weather_forecast.xml
@@ -6,9 +6,38 @@
     android:orientation="vertical"
     tools:context=".features.weather.WeatherForecastFragment">
 
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/days_pager"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/days_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <ImageView
+            android:id="@+id/left"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start"
+            android:layout_marginTop="25dp"
+            android:src="@drawable/ic_arrow_left"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp">
+        </ImageView>
+
+        <ImageView
+            android:id="@+id/right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginTop="25dp"
+            android:src="@drawable/ic_arrow_right"
+            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp">
+
+        </ImageView>
+
+    </FrameLayout>
 
 </LinearLayout>
