WIP on forecast list items UI

--- a/app/src/main/res/layout/fragment_add_bookmark_map.xml
+++ b/app/src/main/res/layout/fragment_add_bookmark_map.xml
@@ -10,7 +10,7 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".features.bookmarks.map.AddBookmarkMapFragment" />
+        tools:context=".features.forecasts.map.AddBookmarkMapFragment" />
 
     <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
