--- a/app/src/main/res/layout/fragment_bookmarks.xml
+++ b/app/src/main/res/layout/fragment_bookmarks.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".features.bookmarks.home.BookmarksFragment">
+    tools:context=".features.forecasts.home.BookmarksFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/bookmarks_rv"
