--- a/app/src/main/res/layout/fragment_weather_forecast.xml
+++ b/app/src/main/res/layout/fragment_weather_forecast.xml
@@ -15,26 +15,33 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
+        <ProgressBar
+            android:id="@+id/progressbar"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="30dp"
+            android:visibility="gone" />
+
         <ImageView
             android:id="@+id/left"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="33dp"
+            android:layout_height="33dp"
             android:layout_gravity="start"
-            android:layout_marginTop="25dp"
-            android:src="@drawable/ic_arrow_left"
+            android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginStart="10dp">
-        </ImageView>
+            android:layout_marginTop="30dp"
+            android:src="@drawable/ic_arrow_left" />
 
         <ImageView
             android:id="@+id/right"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="33dp"
+            android:layout_height="33dp"
             android:layout_gravity="end"
-            android:layout_marginTop="25dp"
-            android:src="@drawable/ic_arrow_right"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginEnd="10dp">
+            android:src="@drawable/ic_arrow_right">
 
         </ImageView>
 
