--- a/app/src/main/res/layout/view_forecast_item.xml
+++ b/app/src/main/res/layout/view_forecast_item.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="@dimen/card_corner_radius"
-    app:cardUseCompatPadding="true"
-    app:cardElevation="@dimen/card_elevation"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white">
+    android:background="@color/white"
+    app:cardCornerRadius="@dimen/card_corner_radius"
+    app:cardElevation="@dimen/card_elevation"
+    app:cardUseCompatPadding="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,11 +14,25 @@
         android:orientation="vertical"
         android:padding="6dp">
 
-        <TextView
-            android:id="@+id/time"
-            style="@style/header_text">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="6dp">
 
-        </TextView>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_clock"
+                android:layout_marginRight="8dp"
+                android:layout_marginEnd="8dp" />
+
+            <TextView
+                android:id="@+id/time"
+                style="@style/header_text"
+                android:layout_gravity="center_vertical"/>
+
+        </LinearLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -27,8 +40,9 @@
 
             <ImageView
                 android:id="@+id/icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:scaleType="centerInside"/>
 
             <LinearLayout
                 android:id="@+id/title_ll"
@@ -59,8 +73,11 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
-                android:textSize="21sp"
-                android:textStyle="bold" />
+                android:layout_centerVertical="true"
+                android:textSize="23sp"
+                android:textStyle="bold"
+                android:layout_marginRight="4dp"
+                android:layout_marginEnd="4dp" />
         </RelativeLayout>
 
         <LinearLayout
