--- a/app/src/main/res/layout/view_bookmark_item.xml
+++ b/app/src/main/res/layout/view_bookmark_item.xml
@@ -4,27 +4,35 @@
     android:id="@+id/todo_root"
     android:layout_width="match_parent"
     android:layout_height="@dimen/bookmark_height"
-    android:layout_marginBottom="5dp"
     android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp"
     app:cardCornerRadius="@dimen/card_corner_radius"
     app:cardElevation="@dimen/card_elevation"
     app:cardUseCompatPadding="true">
 
     <LinearLayout
+        android:id="@+id/bookmark_item_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:id="@+id/bookmark_item_background"
-        android:gravity="center_vertical">
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/ic_pin" />
 
         <TextView
-            android:layout_marginLeft="10dp"
             android:id="@+id/bookmark_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:singleLine="true"
-            android:textSize="@dimen/large_text" />
+            android:textSize="20sp" />
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
