--- a/app/src/main/res/layout/fragment_bookmarks.xml
+++ b/app/src/main/res/layout/fragment_bookmarks.xml
@@ -21,14 +21,16 @@
                 android:layout_marginLeft="@dimen/screen_vertical_padding"
                 android:layout_marginTop="8dp"
                 android:layout_marginRight="@dimen/screen_vertical_padding"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:focusableInTouchMode="true">
 
                 <EditText
                     android:id="@+id/seach_edit_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="60dp" />
+                    android:layout_marginRight="60dp"
+                    android:layout_marginEnd="60dp" />
 
                 <ImageView
                     android:id="@+id/search_icon"
@@ -37,7 +39,8 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="8dp"
-                    android:src="@drawable/ic_search" />
+                    android:src="@drawable/ic_search"
+                    android:layout_alignParentEnd="true" />
 
             </RelativeLayout>
 
