updated help html

--- a/app/src/main/res/layout/fragment_day_forecast.xml
+++ b/app/src/main/res/layout/fragment_day_forecast.xml
@@ -19,6 +19,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/forecast_item_height"
+        android:layout_gravity="center_horizontal"
         android:gravity="center"
         android:orientation="horizontal">
 
